<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_experience"
        android:icon="@drawable/ic_domain_black_24dp"
        android:title="@string/title_experience" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/title_education" />

    <item
        android:id="@+id/navigation_skills"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/title_skills" />

    <item
        android:id="@+id/navigation_export"
        android:icon="@drawable/ic_export_black_24dp"
        android:title="@string/title_export" />


</menu>
